# blog

./: .gitignore  .gitmodules  README.md  a  about.md  austin.cabal  blog.cabal  books.html  books.md  books.sh  compile.sh  deploy.sh  gpg.md  index.html  run.sh  site.hi  site.hs  watch.sh
_site/: archive.html  index.html
_site/css/: default.css  pygments-tomorrow.css  syntax.css
_site/posts/: 2015-05-18-goals.html  2015-06-17-inverting-binary-tree.html  2015-06-18-pots.html
assets/css/: .style.scss.swp  style.scss  syntax.css  syntax.scss
css/: default.scss  syntax.css
css/.sass-cache/34d61a0ceaa7f8ad1484af3e480e2f86e0dc048a/: _alerts.scssc  _badges.scssc  _breadcrumbs.scssc  _button-groups.scssc  _buttons.scssc  (+34 more)
notes/: 2015-08-08-basketball.md  2015-09-21-sicp-1.md  clrs-ch2.md
pages/: about.md  books.html
partials/: about.html  books.html  footer.html  head.html  header.html  index.html  index2.html  post-list.html  post.html
posts/: 2015-05-18-goals.md  2015-06-17-inverting-binary-tree.md  2015-06-18-pots.md  2015-07-07-writing-more.md  2015-09-05-vim.md  2015-11-23-dutch-flag-problem.md  2016-10-09-dance-dance-dynamic-programming.md  2016-10-09-ddr-step-charts.md
posts-draft/: 2015-11-23-dutch-flag-problem.md  2016-08-20-afraid.md  2016-08-29-cock-magic.md  2016-09-29-dynamic-programming.md
posts/drafts/: 2017-07-21-competitive-programming-for-interview-practice.md
src/: hakyll.hs
templates/: blank.html  books.html  comments.html  default.html  footer.html  head.html  header.html  index.html  post-list.html  post.html  posts.html  tag.html
(+35 files in other folders)
