name:               austin
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Text.Highlighting.Pygments
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
  ghc-options:      -threaded
  default-language: Haskell2010
